--- a/5/form.html
+++ b/5/form.html
@@ -15,7 +15,7 @@
     <div class="main-header__container container">
       <div class="main-header__logo-wrapper">
 
-        <a href="#" class="main-header__logo logo">
+        <a href="index.html" class="main-header__logo logo">
           <span class="visually-hidden">Логотип.</span>
         </a>
 
@@ -88,7 +88,7 @@
           </ul>
 
           <div class="program-selection-form__contact-details contact-details">
-            <h2 class="contact-details__title title-form">Контактные данные
+            <h2 class="contact-details__title title-form title-form--line">Контактные данные
               (владельца кота)</h2>
             <ul class="program-selection-form__list program-selection-list program-selection-form__list--contacts">
               <li class="program-selection-form__item program-selection-form__item--email">
@@ -161,7 +161,7 @@
   <footer class="main-footer">
     <div class="main-footer__wrapper container">
 
-      <a href="#" class="main-footer__logo-2 logo-2">
+      <a href="index.html" class="main-footer__logo-2 logo-2">
         <img class="logo-2__image logo-2__image--big" src="img/logo-2.svg" width="101" height="18" alt="Логотип Cat Energy.">
       </a>
 
